--- a/templates/apps.html
+++ b/templates/apps.html
@@ -1,28 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Settler</title>
+    <link rel="stylesheet" href="../static/css/apps.css">
 
 </head>
+
 <body>
+    <nav class="nav-header">
+        <div class="header">
+            <div class="nav-list ">
+                <img class="logo_img" src="../static/images/Setteler Logo.png" alt="settler logo" />
+                <a class="nav-links" href="https://www.apple.com/mac/" target="_blank">Home</a>
+                <a class="nav-links" href="https://www.apple.com/ipad/" target="_blank">About</a>
+                <a class="nav-links" href="https://www.apple.com/iphone/" target="_blank">Forum</a>
+                <a class="nav-links" href="https://www.apple.com/watch/" target="_blank">FAQ</a>
+                <a class="nav-links" href="https://www.apple.com/tv/" target="_blank">Contact</a>
+            </div>
+        </div>
+    </nav>
 
-<h1>Useful Apps</h1>
-<a href="https://play.google.com/store/apps/details?id=com.limebike&hl=en"><img src="https://res.cloudinary.com/startup-grind/image/upload/c_fill,dpr_2.0,f_auto,g_center,h_1080,q_100,w_1080/v1/gcs/platform-data-lime/event_banners/Default_Event_Thumbnail_yprqyPz.png" name="lime" width="100" height="100"></a>
-<a href="https://play.google.com/store/apps/details?id=co.bird.android&hl=en"><img src="https://www.eventures.vc/wp-content/uploads/Bird.png" name="bird" width="100" height="100"></a>
-<a href="https://play.google.com/store/apps/details?id=com.zen.zbike&hl=en"><img src="https://s3.amazonaws.com/i3.cleantech/uploads/company/company_logo/52/412352/wind-mobility.png" name="wind" width="100" height="100"></a>
-<a href="https://play.google.com/store/apps/details?id=com.gettaxi.android&hl=en"><img src="https://www.pc.co.il/wp-content/uploads/2014/08/getaxi600.jpg" name="gett" width="100" height="100"></a>
-<a href="https://play.google.com/store/apps/details?id=com.tranzmate&hl=en"><img src="https://upload.wikimedia.org/wikipedia/he/thumb/e/ec/Moovit_Logo_2016.svg/1280px-Moovit_Logo_2016.svg.png" name="moovit" width="100" height="100"></a>
-<a href="https://play.google.com/store/apps/details?id=com.quickode.pangov4&hl=en"><img src="https://motwebmediastg01.blob.core.windows.net/nop-thumbs-images/0022575_pango_493.jpeg" name="pango" width="100" height="100"></a>
-<a href="https://play.google.com/store/apps/details?id=com.colu.localeconomies&hl=en"><img src="https://site.colu.com/wp-content/uploads/2019/02/colu-logo.png" name="colu" width="100" height="100"></a>
-<a href="https://play.google.com/store/apps/details?id=com.qnomy.myvisit.app&hl=en"><img src="https://is5-ssl.mzstatic.com/image/thumb/Purple123/v4/ba/70/dc/ba70dc5f-48af-437d-b5a6-006ac5e416e0/AppIcon-0-1x_U007emarketing-0-85-220-0-10.png/246x0w.png" name="myvisit" width="100" height="100"></a>
-<a href="https://play.google.com/store/apps/details?id=com.tenbis.tbapp&hl=en"><img src="https://servul-api.azureedge.net/Sites/IL/mini_logos/10bis.jpg" name="10bis" width="100" height="100"></a>
-<a href="https://play.google.com/store/apps/details?id=com.wolt.android&hl=en"><img src="https://upload.wikimedia.org/wikipedia/commons/b/b0/Wolt-app-icon-2019.png" name="wolt" width="100" height="100"></a>
-<a href="https://play.google.com/store/apps/details?id=co.hopon.client&hl=en"><img src="https://myaguda.co.il/wp-content/uploads/2017/11/top_logo_hopon3.png" name="hopon" width="100" height="100"></a>
-<a href="https://play.google.com/store/apps/details?id=com.payboxapp&hl=en>"><img src="https://www.colman.ac.il/sites/default/files/PayBox-Logo.png" name="paybox" width="100" height="100"></a>
-<a href="https://play.google.com/store/apps/details?id=com.mobike.global&hl=en"><img src="https://mobike.com/global/public/download__app_icon.png" name="mobike" width="100" height="100"></a>
-<a href="https://play.google.com/store/apps/details?id=il.talent.telobike&hl=en"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/2/2c/Tel-O-Fun_logo.svg/220px-Tel-O-Fun_logo.svg.png" name="Telo" width="100" height="100"></a>
-<a href="https://play.google.com/store/apps/details?id=com.tifi.sekura&hl=en"><img src="https://is5-ssl.mzstatic.com/image/thumb/Purple113/v4/be/8a/f7/be8af742-5112-741f-0be5-f2215eef7636/AppIcon-0-0-1x_U007emarketing-0-0-0-5-0-0-85-220.png/1200x630wa.png" name="spek" width="100" height="100"></a>
+    <div class="app_container">
+        <h1>Useful Apps</h1>
+        <a href="https://play.google.com/store/apps/details?id=com.limebike&hl=en"><img
+                src="https://res.cloudinary.com/startup-grind/image/upload/c_fill,dpr_2.0,f_auto,g_center,h_1080,q_100,w_1080/v1/gcs/platform-data-lime/event_banners/Default_Event_Thumbnail_yprqyPz.png"
+                name="lime" width="100" height="100"></a>
+        <a href="https://play.google.com/store/apps/details?id=co.bird.android&hl=en"><img
+                src="https://www.eventures.vc/wp-content/uploads/Bird.png" name="bird" width="100" height="100"></a>
+        <a href="https://play.google.com/store/apps/details?id=com.zen.zbike&hl=en"><img
+                src="https://s3.amazonaws.com/i3.cleantech/uploads/company/company_logo/52/412352/wind-mobility.png"
+                name="wind" width="100" height="100"></a>
+        <a href="https://play.google.com/store/apps/details?id=com.gettaxi.android&hl=en"><img
+                src="https://www.pc.co.il/wp-content/uploads/2014/08/getaxi600.jpg" name="gett" width="100"
+                height="100"></a>
+        <a href="https://play.google.com/store/apps/details?id=com.tranzmate&hl=en"><img
+                src="https://upload.wikimedia.org/wikipedia/he/thumb/e/ec/Moovit_Logo_2016.svg/1280px-Moovit_Logo_2016.svg.png"
+                name="moovit" width="100" height="100"></a>
+        <a href="https://play.google.com/store/apps/details?id=com.quickode.pangov4&hl=en"><img
+                src="https://motwebmediastg01.blob.core.windows.net/nop-thumbs-images/0022575_pango_493.jpeg"
+                name="pango" width="100" height="100"></a>
+        <a href="https://play.google.com/store/apps/details?id=com.colu.localeconomies&hl=en"><img
+                src="https://site.colu.com/wp-content/uploads/2019/02/colu-logo.png" name="colu" width="100"
+                height="100"></a>
+        <a href="https://play.google.com/store/apps/details?id=com.qnomy.myvisit.app&hl=en"><img
+                src="https://is5-ssl.mzstatic.com/image/thumb/Purple123/v4/ba/70/dc/ba70dc5f-48af-437d-b5a6-006ac5e416e0/AppIcon-0-1x_U007emarketing-0-85-220-0-10.png/246x0w.png"
+                name="myvisit" width="100" height="100"></a>
+        <a href="https://play.google.com/store/apps/details?id=com.tenbis.tbapp&hl=en"><img
+                src="https://servul-api.azureedge.net/Sites/IL/mini_logos/10bis.jpg" name="10bis" width="100"
+                height="100"></a>
+        <a href="https://play.google.com/store/apps/details?id=com.wolt.android&hl=en"><img
+                src="https://upload.wikimedia.org/wikipedia/commons/b/b0/Wolt-app-icon-2019.png" name="wolt" width="100"
+                height="100"></a>
+        <a href="https://play.google.com/store/apps/details?id=co.hopon.client&hl=en"><img
+                src="https://myaguda.co.il/wp-content/uploads/2017/11/top_logo_hopon3.png" name="hopon" width="100"
+                height="100"></a>
+        <a href="https://play.google.com/store/apps/details?id=com.payboxapp&hl=en>"><img
+                src="https://www.colman.ac.il/sites/default/files/PayBox-Logo.png" name="paybox" width="100"
+                height="100"></a>
+        <a href="https://play.google.com/store/apps/details?id=com.mobike.global&hl=en"><img
+                src="https://mobike.com/global/public/download__app_icon.png" name="mobike" width="100"
+                height="100"></a>
+        <a href="https://play.google.com/store/apps/details?id=il.talent.telobike&hl=en"><img
+                src="https://upload.wikimedia.org/wikipedia/en/thumb/2/2c/Tel-O-Fun_logo.svg/220px-Tel-O-Fun_logo.svg.png"
+                name="Telo" width="100" height="100"></a>
+        <a href="https://play.google.com/store/apps/details?id=com.tifi.sekura&hl=en"><img
+                src="https://is5-ssl.mzstatic.com/image/thumb/Purple113/v4/be/8a/f7/be8af742-5112-741f-0be5-f2215eef7636/AppIcon-0-0-1x_U007emarketing-0-0-0-5-0-0-85-220.png/1200x630wa.png"
+                name="spek" width="100" height="100"></a>
 
+    </div>
 </body>
+
 </html>
