--- a/templates/host.html
+++ b/templates/host.html
@@ -15,57 +15,29 @@
           <input type="number" name="age" min="1" max="100" /><br>
           <label>Country of Origin:</label>
           <input type="text" name="country_of_origin" /><br>
-          <label>City of Residence:</label>
+          <label>City:</label>
           <input type="text" name="city_of_residence" /><br>
           <label>Address:</label>
           <input type="text" name="address" /><br>
           <label>Maximum Number of Guests:</label>
           <input type="number" name="number_of_guests" min="1" max="10" /><br>
           <label>Meal Type</label> <br>
-    <select multiple name="meal_type">
-            <option  value="fish" name="fish">Fish</option >
-            <option  value="meat" name="meat">Meat</option >
-            <option  value="milk" name="milk">Milk</option >
-            <option  value="indian" name="indian">Indian</option >
-            <option  value="chinese" name="chinese">Chinese</option >
-            <option  value="italian" name="italian">Italian</option >
-            <option  value="israeli" name="israeli">Israeli</option >
-            <option  value="kosher" name="kosher">Kosher</option >
-            <option  value="vegan" name="vegan">Vegan</option >
-            <option  value="pork" name="pork">Pork</option >
+    <select multiple name="meal_type[]">
+            <option  value="fish" name="type">Fish</option >
+            <option  value="meat" name="type">Meat</option >
+            <option  value="milk" name="type">Milk</option >
+            <option  value="indian" name="type">Indian</option >
+            <option  value="chinese" name="type">Chinese</option >
+            <option  value="italian" name="type">Italian</option >
+            <option  value="israeli" name="type">Israeli</option >
+            <option  value="kosher" name="type">Kosher</option >
+            <option  value="vegan" name="type">Vegan</option >
+            <option  value="pork" name="type">Pork</option >
 
         </select><br><br>
-        <label>Food Restrictions</label> <br>
-        <input type="checkbox"  value="vegan">Vegan</input type="checkbox" ><br>
-          <input type="checkbox"  value="vegetarian">Vegetarian</input type="checkbox" ><br>
-          <input type="checkbox"  value="kosher">Kosher</input type="checkbox" ><br>
-          <input type="checkbox"  value="gluten-free">Gluten-Free</input type="checkbox" ><br>
-          <input type="checkbox"  value="hallal">Hallal</input type="checkbox" ><br>
-          <input type="checkbox"  value="nut">Nut Allergy</input type="checkbox" ><br>
-          <input type="checkbox"  value="pork">Pork</input type="checkbox" ><br><br>
-         
-      </select>
 
-          <label>Meal Type</label>
-    <select multiple name="food_preference[]">
-            <option name="preference"  value="fish">Fish</option >
-            <option name="preference"  value="meat">Meat</option >
-            <option name="preference" value="milk">Milk</option >
-            <option name="preference" value="indian">Indian</option >
-            <option name="preference"value="kosher">Kosher</option >
-            <option name="preference" value="chinese">Chinese</option >
-            <option name="preference"  value="italian">Italian</option >
-            <option name="preference"  value="israeli">Israeli</option >
-            <option name="preference"  value="kosher">Kosher</option >
-            <option name="preference"  value="vegan">Vegan</option >
-            <option name="preference"  value="vegetarian">Vegetarian</option >
-        </select>
         <h6>Hold down the Ctrl (windows) / Command (Mac) button to select multiple options.</h6>
 
-         <label>Food Allergies:</label>
-          <input type="radio" name="allergies" value="no" />No
-          <input type="radio" name="allergies" value="yes" />Yes
-          <input type="text" name="allergies" /><br>
           <label>Meal Date</label>
           <input type="date" name="meal_date"><br>
           <label>Meal Time</label>
