--- a/templates/signup.html
+++ b/templates/signup.html
@@ -56,7 +56,7 @@
                         <input type="text" name="address" />
                     </div>
                 </div>
-            <input type="submit">Submit<input>
+            <input type="submit"><input>
             </form>
         </div>
     </div>
