--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -27,41 +27,19 @@
 
     <div class="container">
       <nav class="nav-header">
-        <div class="header"></div>
+        <div class="header">
+            
         <div class="nav-list ">
-          <img
-            class="logo_img"
-            src="../static/images/Setteler Logo.png"
-            alt="settler logo"
-          />
-          <a class="nav-links" href="https://www.apple.com/mac/" target="_blank"
-            >Home</a
-          >
-          <a
-            class="nav-links"
-            href="https://www.apple.com/ipad/"
-            target="_blank"
-            >About</a
-          >
-          <a
-            class="nav-links"
-            href="https://www.apple.com/iphone/"
-            target="_blank"
-            >Forum</a
-          >
-          <a
-            class="nav-links"
-            href="https://www.apple.com/watch/"
-            target="_blank"
-            >FAQ</a
-          >
-          <a class="nav-links" href="https://www.apple.com/tv/" target="_blank"
-            >Contact</a
-          >
+          <img class="logo_img"  src="../static/images/Setteler Logo.png" alt="settler logo"/>
+          <a class="nav-links" href="https://www.apple.com/mac/" target="_blank">Home</a>
+          <a class="nav-links" href="https://www.apple.com/ipad/" target="_blank">About</a>
+          <a class="nav-links" href="https://www.apple.com/iphone/" target="_blank">Forum</a>
+          <a class="nav-links" href="https://www.apple.com/watch/" target="_blank">FAQ</a>
+          <a class="nav-links" href="https://www.apple.com/tv/" target="_blank">Contact</a>
         </div>
       </nav>
 
-      <div class="stripe stripe1 header">
+      <div class="stripe">
         <div>
           <h1 class="stripe1_header header">Settler</h1>
           <h2 class="stripe1_subheader">Your home away from home...</h2>
@@ -71,27 +49,14 @@
         </div>
       </div>
 
-      <div class="stripe stripe_2 header">
-        <div>
-          <h1 class="stripe_2_header header">Get all</h1>
-          <h2 class="stripe_2_subheader">Something something something.</h2>
-          <p class="stripe_2_sub_subheader">
-            From $24.95/mo. or $599 
-          </p>
-        </div>
-        <div class="stripe_2_links_container">
-          <a class="stripe_2_links" href="#">Learn more ></a>
-          <a class="stripe_2_links" href="#">Buy ></a>
-        </div>
-      </div>
 
       <!-- split box block -->
       <div class="split_box">
         <!-- 1 Left-->
         <div class="small-container container1 ">
-          <div>
-         
-            
+          <div class="box_header_container">
+            <h2 class='box_header'>Useful Locations</h2>
+        
           </div>
 
          
@@ -99,7 +64,10 @@
 
         <!-- 2vRight -->
         <div class="small-container container2 ">
-         
+            <div class="box_header_container">
+                <h2 class='box_header'>Cost of Living</h2>
+            
+              </div>
          
         </div>
       </div>
@@ -108,24 +76,37 @@
       <div class="split_box ">
         <!-- 3-Left -->
         <div class="small-container container3 ">
-          <div>
-       
-          </div>
+            <div class="box_header_container">
+                <h2 class='box_header'>Meal Hosting</h2>
+            
+              </div>
 
           
         </div>
         <!-- 4-Right -->
         <div class="small-container container4 ">
+            <div class="box_header_container">
+                <h2 class='box_header'>Useful Apps</h2>
+            
+              </div>
           
         </div>
       </div>
       <div class="split_box ">
         <!-- 5-Left -->
         <div class="small-container container5 ">
+            <div class="box_header_container">
+                <h2 class='box_header'>Take a Quiz</h2>
+            
+              </div>
           
         </div>
         <!-- 6-Right -->
         <div class="small-container container6 ">
+            <div class="box_header_container">
+                <h2 class='box_header'>Government Information</h2>
+            
+              </div>
           
         </div>
       </div>
@@ -133,13 +114,17 @@
       <div class="split_box ">
         <!-- 5-Left -->
         <div class="small-container container7 ">
-         
+            <div class="box_header_container">
+                <h2 class='box_header'>Transportation Information</h2>
+            
+              </div>
 
         </div>
         <!-- 6-Right -->
         <div class="small-container container8 ">
-          
-          </a>
+            <div class="box_header_container">
+                <h2 class='box_header'>Activities</h2>
+              </div>
           </div>
         </div>
       </div>
