--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Welcome</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Welcome</title>
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat:100,400,500,600,700&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:100,400,500,600,700&display=swap" rel="stylesheet" />
+    <!-- CSS -->
+    <link rel="stylesheet" href="../static/css/welcome.css" />
 
-  <!-- CSS -->
-  <link rel="stylesheet" href="../static/css/welcome.css" />
+    <!-- Font Awesome -->
+    <script
+      src="https://kit.fontawesome.com/f26da25149.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-  <!-- Font Awesome -->
-  <script src="https://kit.fontawesome.com/f26da25149.js" crossorigin="anonymous"></script>
-</head>
+  <body>
+    <!-- 1. Navigation / Header Bar -->
 
-<<<<<<< HEAD
     <div class="container">
       <nav class="nav-header">
         <div class="header">
             
-=======
-<body>
-  <!-- 1. Navigation / Header Bar -->
-
-  <div class="container">
-    <nav class="nav-header">
-      <div class="header">
->>>>>>> 1b25b5beaf369c93967644f47351f75dfbaa1e87
         <div class="nav-list ">
           <img class="logo_img"  src="../static/images/Setteler Logo.png" alt="settler logo"/>
           <a class="nav-links" href="https://www.apple.com/mac/" target="_blank">Home</a>
@@ -42,19 +41,14 @@
 
       <div class="stripe">
         <div>
-          <h1 class="small_container_text1">Box1</h1>
-          <h4 class="small_container_text1">Box 1.</h4>
-          <h3 class="small_container_text1">
-            Box 1
-          </h3>
+          <h1 class="stripe1_header header">Settler</h1>
+          <h2 class="stripe1_subheader">Your home away from home...</h2>
         </div>
-
-        <div class="links_container_1">
-          <a class="links_small_container1" href="#">Box 1</a>
+        <div class="stripe1_links_container">
+          <a class="stripe1_links" href="#">Learn more </a>
         </div>
       </div>
 
-<<<<<<< HEAD
 
       <!-- split box block -->
       <div class="split_box">
@@ -64,17 +58,9 @@
             <h2 class='box_header'>Useful Locations</h2>
         
           </div>
-=======
-      <div class="stripe stripe_2 header">
-        <div>
-          <h1 class="small_container_text2">Box 2</h1>
->>>>>>> 1b25b5beaf369c93967644f47351f75dfbaa1e87
 
-          <h4 class="small_container_text2">
-            Box 2
-          </h4>
+         
         </div>
-<<<<<<< HEAD
 
         <!-- 2vRight -->
         <div class="small-container container2 ">
@@ -83,15 +69,9 @@
             
               </div>
          
-=======
-        <div class="links_container_2">
-          <a class="links_small_container2" href="#">Box 2</a>
->>>>>>> 1b25b5beaf369c93967644f47351f75dfbaa1e87
         </div>
       </div>
-    </div>
 
-<<<<<<< HEAD
       <!-- split box block -->
       <div class="split_box ">
         <!-- 3-Left -->
@@ -149,27 +129,6 @@
         </div>
       </div>
       
-=======
-    <!-- split box block -->
-    <div class="split_box ">
-      <!-- 3-Left -->
-      <div class="small-container container3 ">
-        <div>
-          <h1 class="small_container_text3">Box 3</h1>
-          <h4 class="small_container_text3">
-            Box 3
-          </h4>
-        </div>
-
->>>>>>> 1b25b5beaf369c93967644f47351f75dfbaa1e87
     </div>
-    <div class="split_box ">
-      <!-- 5-Left -->
-      <div class="small-container container5 ">
-        <div>
-          <h1 class="small_container_text5">Box 5</h1>
-          <h4 class="small_container_text5">
-            Box 5
-          </h4>
-        </div>
-
+  </body>
+</html>
