--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -39,7 +39,11 @@
         </div>
       </nav>
 
-      <div class="stripe">
+      <div class="stripe stripe1">
+    
+      </div>
+
+      <div class="stripe stripe2">
         <div>
           <h1 class="stripe1_header header">Settler</h1>
           <h2 class="stripe1_subheader">Your home away from home...</h2>
