--- a/static/css/welcome.css
+++ b/static/css/welcome.css
@@ -7,13 +7,14 @@ body {
 }
 
 .logo_img {
-  height: 50px;
-  width: 50px;
+  height: 60px;
+  width: 60px;
 }
 
 .nav-list {
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .nav-links {
