Css and Html pages linked

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:100,400,500,600,700&display=swap" rel="stylesheet" />
 
   <!-- CSS -->
+  <link rel="stylesheet" href="../static/css/style.css" />
   <link rel="stylesheet" href="../static/css/welcome.css" />
 
   <!-- Font Awesome -->
@@ -24,76 +25,53 @@
     <nav class="nav-header">
       <div class="header">
         <div class="nav-list ">
-          <img
-            class="logo_img"
-            src="../static/images/Setteler Logo.png"
-            alt="settler logo"
-          />
-          <a class="nav-links" href="https://www.apple.com/mac/" target="_blank"
-            >Home</a
-          >
-          <a
-            class="nav-links"
-            href="https://www.apple.com/ipad/"
-            target="_blank"
-            >About</a
-          >
-          <a
-            class="nav-links"
-            href="https://www.apple.com/iphone/"
-            target="_blank"
-            >Forum</a
-          >
-          <a
-            class="nav-links"
-            href="https://www.apple.com/watch/"
-            target="_blank"
-            >FAQ</a
-          >
-          <a class="nav-links" href="https://www.apple.com/tv/" target="_blank"
-            >Contact</a
-          >
+          <img class="logo_img" src="../static/images/Setteler Logo.png" alt="settler logo" />
+          <a class="nav-links" href="https://www.apple.com/mac/" target="_blank">Home</a>
+          <a class="nav-links" href="https://www.apple.com/ipad/" target="_blank">About</a>
+          <a class="nav-links" href="https://www.apple.com/iphone/" target="_blank">Forum</a>
+          <a class="nav-links" href="https://www.apple.com/watch/" target="_blank">FAQ</a>
+          <a class="nav-links" href="https://www.apple.com/tv/" target="_blank">Contact</a>
         </div>
-      </nav>
+    </nav>
 
-      <div class="stripe stripe1 header">
-        <div>
-          <h1 class="small_container_text1">Box1</h1>
-          <h4 class="small_container_text1">Box 1.</h4>
-          <h3 class="small_container_text1">
-            Box 1
-          </h3>
-        </div>
-
-        <div class="links_container_1">
-          <a class="links_small_container1" href="#">Box 1</a>
-        </div>
+    <div class="stripe stripe1 header">
+      <div>
+        <h1 class="small_container_text1">Box1</h1>
+        <h4 class="small_container_text1">Box 1.</h4>
+        <h3 class="small_container_text1">
+          Box 1
+        </h3>
       </div>
 
-      <div class="stripe stripe_2 header">
-        <div>
-          <h1 class="small_container_text2">Box 2</h1>
-
-          <h4 class="small_container_text2">
-            Box 2
-          </h4>
-        </div>
-        <div class="links_container_2">
-          <a class="links_small_container2" href="#">Box 2</a>
-        </div>
+      <div class="links_container_1">
+        <a class="links_small_container1" href="#">Box 1</a>
       </div>
     </div>
 
-    <!-- split box block -->
-    <div class="split_box ">
-      <!-- 3-Left -->
-      <div class="small-container container3 ">
-        <div>
-          <h1 class="small_container_text3">Box 3</h1>
-          <h4 class="small_container_text3">
-            Box 3
-          </h4>
-        </div>
+    <div class="stripe stripe_2 header">
+      <div>
+        <h1 class="small_container_text2">Box 2</h1>
+
+        <h4 class="small_container_text2">
+          Box 2
+        </h4>
+      </div>
+      <div class="links_container_2">
+        <a class="links_small_container2" href="#">Box 2</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- split box block -->
+  <div class="split_box ">
+    <!-- 3-Left -->
+    <div class="small-container container3 ">
+      <div>
+        <h1 class="small_container_text3">Box 3</h1>
+        <h4 class="small_container_text3">
+          Box 3
+        </h4>
+      </div>
 
     </div>
     <div class="split_box ">
@@ -105,4 +83,3 @@
             Box 5
           </h4>
         </div>
-
