--- a/templates/apps.html
+++ b/templates/apps.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <title>Settler</title>
-    <link rel="stylesheet" href="../static/css/apps.css">
-
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="../static/css/style.css">
+        <title>Settler - Apps</title>
 </head>
-
 <body>
+       
     <nav class="nav-header">
         <div class="header">
             <div class="nav-list ">
