--- a/templates/maps.html
+++ b/templates/maps.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="../static/css/style.css">
+    <title>Settler - Map</title>
+</head>
+<body>
+    
 <head>
     <style>
         /* Set the size of the div element that contains the map */
