--- a/templates/quizLang.html
+++ b/templates/quizLang.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="../static/css/style.css">
+    <title>Settler - Quiz</title>
 </head>
+
 <body>
-<div class="fyrebox_quiz" data-gid="PzmW9pxNg" data-oid="YoEP6Zvq3"></div>
-<script src="https://cdn.fyrebox.com/javascripts/fyrebox.min.js?2" defer="defer" async></script>
+
+    <div class="fyrebox_quiz" data-gid="PzmW9pxNg" data-oid="YoEP6Zvq3"></div>
+    <script src="https://cdn.fyrebox.com/javascripts/fyrebox.min.js?2" defer="defer" async></script>
 
 </body>
+
 </html>
