--- a/templates/quizPop.html
+++ b/templates/quizPop.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Settler - Quiz</title>
 </head>
+
 <body>
 
-<div class="fyrebox_quiz" data-gid="6kGWZp5QG" data-oid="YoEP6Zvq3"></div>
-<script src="https://cdn.fyrebox.com/javascripts/fyrebox.min.js?2" defer="defer" async></script>
+    <div class="fyrebox_quiz" data-gid="6kGWZp5QG" data-oid="YoEP6Zvq3"></div>
+    <script src="https://cdn.fyrebox.com/javascripts/fyrebox.min.js?2" defer="defer" async></script>
 
 </body>
+
 </html>
