--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <title>Sign Up</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet" href="../static/css/signup.css">
+    <title>Settler - SignUp</title>
 </head>
-
+<body>
+    
+</body>
+</html>
 <body>
     <div class="container">
         <div class="header">
