--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -40,10 +40,6 @@
       </nav>
 
       <div class="stripe stripe1">
-    
-      </div>
-
-      <div class="stripe stripe2">
         <div>
           <h1 class="stripe1_header header">Settler</h1>
           <h2 class="stripe1_subheader">Your home away from home...</h2>
@@ -58,20 +54,20 @@
       <div class="split_box">
         <!-- 1 Left-->
         <div class="small-container container1 ">
-          <div class="box_header_container">
+          <button class="box_header_container">
             <h2 class='box_header'>Useful Locations</h2>
         
-          </div>
+          </button>
 
          
         </div>
 
         <!-- 2vRight -->
         <div class="small-container container2 ">
-            <div class="box_header_container">
+            <button class="box_header_container">
                 <h2 class='box_header'>Cost of Living</h2>
             
-              </div>
+              </button>
          
         </div>
       </div>
@@ -80,37 +76,37 @@
       <div class="split_box ">
         <!-- 3-Left -->
         <div class="small-container container3 ">
-            <div class="box_header_container">
+            <button class="box_header_container">
                 <h2 class='box_header'>Meal Hosting</h2>
             
-              </div>
+              </button>
 
           
         </div>
         <!-- 4-Right -->
         <div class="small-container container4 ">
-            <div class="box_header_container">
+            <button class="box_header_container">
                 <h2 class='box_header'>Useful Apps</h2>
             
-              </div>
+              </button>
           
         </div>
       </div>
       <div class="split_box ">
         <!-- 5-Left -->
         <div class="small-container container5 ">
-            <div class="box_header_container">
+            <button class="box_header_container">
                 <h2 class='box_header'>Take a Quiz</h2>
             
-              </div>
+              </button>
           
         </div>
         <!-- 6-Right -->
         <div class="small-container container6 ">
-            <div class="box_header_container">
+            <button class="box_header_container">
                 <h2 class='box_header'>Government Information</h2>
             
-              </div>
+              </button>
           
         </div>
       </div>
@@ -118,10 +114,10 @@
       <div class="split_box ">
         <!-- 5-Left -->
         <div class="small-container container7 ">
-            <div class="box_header_container">
+            <button class="box_header_container">
                 <h2 class='box_header'>Transportation Information</h2>
             
-              </div>
+            </button>
 
         </div>
         <!-- 6-Right -->
