--- a/static/css/welcome.css
+++ b/static/css/welcome.css
@@ -107,7 +107,7 @@ body {
 }
 
 .stripe1{
-    background-image: url("http://habitat-nola.org/wp-content/uploads/2015/04/welcome-home-2-3.png");
+    background-image: url("https://i1.wp.com/ips-dc.org/wp-content/uploads/2019/09/immigration.jpg?resize=1080%2C675&ssl=1");
     background-position: center;
     background-size: contain;
     border: 1px solid green;
