added listings function for hosted meals

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -7,13 +7,15 @@
     <title>Welcome</title>
 
     <!-- Google Fonts -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:100,400,500,600,700&display=swap"
-      rel="stylesheet"
-    />
+<!--    <link-->
+<!--      href="https://fonts.googleapis.com/css?family=Montserrat:100,400,500,600,700&display=swap"-->
+<!--      rel="stylesheet"-->
+<!--    />-->
 
     <!-- CSS -->
+<!--      <link rel="stylesheet" href="../static/css/style.css" />-->
     <link rel="stylesheet" href="../static/css/welcome.css" />
+
 
     <!-- Font Awesome -->
     <script
@@ -54,7 +56,7 @@
       <div class="split_box">
         <!-- 1 Left-->
         <div class="small-container container1 ">
-          <button class="box_header_container">
+          <button onclick="window.location.href = '/map';" class="box_header_container">
             <h2 class='box_header'>Useful Locations</h2>
         
           </button>
@@ -64,7 +66,7 @@
 
         <!-- 2vRight -->
         <div class="small-container container2 ">
-            <button class="box_header_container">
+            <button onclick="window.location.href = '/prices';" class="box_header_container">
                 <h2 class='box_header'>Cost of Living</h2>
             
               </button>
@@ -76,7 +78,7 @@
       <div class="split_box ">
         <!-- 3-Left -->
         <div class="small-container container3 ">
-            <button class="box_header_container">
+            <button onclick="window.location.href = '/meal';" class="box_header_container">
                 <h2 class='box_header'>Meal Hosting</h2>
             
               </button>
@@ -85,7 +87,7 @@
         </div>
         <!-- 4-Right -->
         <div class="small-container container4 ">
-            <button class="box_header_container">
+            <button onclick="window.location.href = '/apps';" class="box_header_container">
                 <h2 class='box_header'>Useful Apps</h2>
             
               </button>
@@ -95,7 +97,7 @@
       <div class="split_box ">
         <!-- 5-Left -->
         <div class="small-container container5 ">
-            <button class="box_header_container">
+            <button onclick="window.location.href = '/quiz';" class="box_header_container">
                 <h2 class='box_header'>Take a Quiz</h2>
             
               </button>
@@ -103,7 +105,7 @@
         </div>
         <!-- 6-Right -->
         <div class="small-container container6 ">
-            <button class="box_header_container">
+            <button onclick="window.location.href = '/info';" class="box_header_container">
                 <h2 class='box_header'>Government Information</h2>
             
               </button>
@@ -114,7 +116,7 @@
       <div class="split_box ">
         <!-- 5-Left -->
         <div class="small-container container7 ">
-            <button class="box_header_container">
+            <button onclick="window.location.href = '/transportation';" class="box_header_container">
                 <h2 class='box_header'>Transportation Information</h2>
             
             </button>
@@ -122,9 +124,9 @@
         </div>
         <!-- 6-Right -->
         <div class="small-container container8 ">
-            <div class="box_header_container">
+            <button onclick="window.location.href = '/activities';"class="box_header_container">
                 <h2 class='box_header'>Activities</h2>
-              </div>
+              </button>
           </div>
         </div>
       </div>
