added listings function for hosted meals

--- a/templates/host.html
+++ b/templates/host.html
@@ -11,7 +11,7 @@
 
 <body>
 
-  <div class="form-container">
+  <div class="container">
     <form>
       <label>First Name:</label>
       <input type="text" name="first_name" /><br>
