--- a/templates/host.html
+++ b/templates/host.html
@@ -12,7 +12,7 @@
 <body>
 
   <div class="container">
-    <form>
+    <form action="{{url_for('create_meal')}}" method="post">
       <label>First Name:</label>
       <input type="text" name="first_name" /><br>
       <label>Last Name:</label>
@@ -48,7 +48,7 @@
       <input type="date" name="meal_date"><br>
       <label>Meal Time</label>
       <input type="time" name="meal_time">
-      <input type="submit" value="submit">
+      <input type="submit">
     </form>
   </div>
 
